# pl-icp

./: CMakeLists.txt  DEVLOG.md  LICENSE  README.md
cfg/: sm_config.txt
debug_data/g2o_file/: 0808-1.g2o  0808-2.g2o  0808-3.g2o  0808-4.g2o  0809-1.g2o  0809-2.g2o  0809-3.g2o  080920-1.g2o  080920-2.g2o  080920-3.g2o  080920-4.g2o  080920-5-kf.g2o  080920-5.g2o
include/csm/: algos.h  csm.h  csm_all.h  laser_data.h  laser_data_inline.h  laser_data_yogo.h  math_utils_gsl.h  sm_config.h  sm_options.h
include/egsl/: egsl.h
include/gpc/: gpc.h  gpc_utils.h
include/gsl_eigen/: egsl.h  gsl_eigen.h
include/icp/: graph_interface.h  icp.h  icp_optimization.h  icp_yogo.h  pl_icp.h
scripts/: draw_trajectory.py
src/: CMakeLists.txt  draw_trajectory.py  icp_with_optimization.cpp  pl-icp.cpp  plicp-yogocc.cpp
src/csm/: clustering.cpp  laser_data.cpp  laser_data_yogo.cpp  logging.cpp  math_utils.cpp  math_utils_gsl.cpp  orientation.cpp  sm_config.cpp  sm_options.cpp  utils.cpp
src/egsl/: egsl.cpp  egsl_conversions.cpp  egsl_misc.cpp  egsl_ops.cpp
src/gpc/: gpc.cpp  gpc_utils.cpp
src/icp/: icp.cpp  icp.cpp.0822  icp_corr_dumb.cpp  icp_corr_tricks.cpp  icp_covariance.cpp  icp_debug.cpp  icp_loop.cpp  icp_optimization.cpp  icp_outliers.cpp  icp_yogo.cpp  pl_icp.cpp
src/options/: options.cpp
